2008-05-18  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/base.py, jhbuild/commands/checkbranches.py,
	jhbuild/commands/info.py, jhbuild/commands/rdepends.py,
	jhbuild/commands/sanitycheck.py, jhbuild/frontends/terminal.py,
	jhbuild/main.py: made uprint() use locale.getpreferredencoding()
	instead of getting sys.stdout encoding, as redirecting output would
	fall to ascii encoding.  Also replaced print by uprint() in many
	places.

2008-05-18  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/freedesktop-2.22.modules:
	* modulesets/freedesktop-2.24.modules: Removed goocanvas
	* modulesets/gnome-2.22.modules: Added goocanvas here
	* modulesets/gnome-2.24.modules: and changed the (duplicate) goocanvas 
	here, because it has moved from cvs.cairographics.org to svn.gnome.org.

2008-05-17  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml: use straight ascii quote.

2008-05-17  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules: updated libgcrypt to
	1.4.1.  (closes: #532696)

2008-05-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/frontends/terminal.py, jhbuild/modtypes/__init__.py,
	jhbuild/utils/notify.py, jhbuild/utils/trayicon.py: encode strings
	according to terminal character set.  (closes: #532932)

2008-05-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/__init__.py: marked for translation another string.
	(closes: #532752)

2008-05-13  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.24.modules: added dbus and dbus-glib as
	libbonobo dependencies.  (closes: #532988)

2008-05-13  James Sharpe <jsharpe@svn.gnome.org>

	* jhbuild/versioncontrol/git.py: Changed the method used to deal
	with externals when using git-svn to parse the unhandled.log file
	in .git/svn/$branch/ (closes #532675)

2008-05-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/frontends/terminal.py: don't mix xterm control characters and
	UTF-8 output.  (closes: #532932)

2008-05-13 Dodji Seketeli <dodji@gnome.org>
