@@ -1,5 +1,10 @@
 2008-05-18  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/frontends/terminal.py: also use locale preferred encoding
+	when asking for input.
+
+2008-05-18  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/commands/base.py, jhbuild/commands/checkbranches.py,
 	jhbuild/commands/info.py, jhbuild/commands/rdepends.py,
 	jhbuild/commands/sanitycheck.py, jhbuild/frontends/terminal.py,
